# YouTube-CX-Agent-Studio-Real-Estate

./: .gitignore  openapi.yaml  pyproject.toml  requirements.txt  run.py
data/: buy_agent  main_agent  real_estate_dummy_data.json  sell_agent
data/openapi/: getCompany.yaml  registerCallback.yaml  searchFaqs.yaml  searchProjects.yaml  sellPropertyCallback.yaml  sendOtp.yaml  verifyOtp.yaml
src/: data.py  main.py
src/routers/: company.py  faqs.py  leads.py  projects.py
